# pixel-poem

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Utils.h  config.h  main.cpp
bullet/: Bullet.cpp  Bullet.h  bullet.cpp  bullet.h
character/: Character.cpp  Character.hpp
core/: config.h
core/game/: Game.cpp  Game.h  GameStateManager.cpp  GameStateManager.h
enemy/: Enemy.cpp  Enemy.h
entities/EntitiyManager/: EntitiyManager.h
entities/boss/: Boss.cpp  Boss.h
entities/bullet/: Bullet.cpp  Bullet.h
entities/enemy/: Enemy.cpp  Enemy.h
entities/entity/: EntitiyManager.h  EntityManager.cpp  EntityManager.h
entities/item/: Item.cpp  Item.h
entities/money/: Money.cpp  Money.h
entities/player/: Player.cpp  Player.h
entities/weapon/: Weapon.cpp  Weapon.h
game/: Game.cpp  Game.h
input/: Input.cpp
menu/: Menu.cpp
player/: Player.cpp  Player.h
resources/sprites/character and tileset/: Dungeon_Tileset.png-autosave.kra
resources/textures/guns/: health.png-autosave.kra
resources/textures/rooms/: сверху и справа.png~
systems/Sound/: SoundManager.cpp  SoundManager.h
systems/animation/: Animation.cpp  Animation.h
systems/camera/: CameraManager.cpp  CameraManager.h
systems/collision/: CollisionManager.cpp  CollisionManager.h
systems/end/: End.cpp  End.h
systems/input/: Input.cpp  Input.h
systems/map/: Map.cpp  Map.h  MapManager.cpp  MapManager.h  mapManager.cpp  mapManager.h  rooms.h
systems/menu/: Menu.cpp  Menu.h
systems/pause/: Pause.cpp  Pause.h
systems/ui/: UI.cpp  UI.h
weapon/: Weapon.cpp  Weapon.h  weapon.cpp  weapon.h
